--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>National Association of Cats</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <header>
